--- a/Sparkt.WebApp/Views/Shared/_WorkMenu.cshtml
+++ b/Sparkt.WebApp/Views/Shared/_WorkMenu.cshtml
@@ -12,10 +12,12 @@
         <ul id="starplus" class="horizontalScroll" >
             <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("NayiSoch","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/nayosoch-thum.jpg" alt="" /> <span>Nayi Soch</span> </a> </li>
             <li class="fadeRight t-animated" data-t-show="2"><a href="@Url.Action("Ted","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/ted-thum.jpg" alt="" /> <span>TED TALKS INDIA</span> </a> </li>
-            <li class="fadeRight t-animated" data-t-show="3"><a href="@Url.Action("TedGoogleCards","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/ted-thum.jpg" alt="" /> <span>TED GOOGLE CARDS</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="3"><a href="@Url.Action("TedGoogleCards","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/ted-google-cards-thum.jpg" alt="" /> <span>TED GOOGLE CARDS</span> </a> </li>
             <li class="fadeRight t-animated" data-t-show="4"><a href="@Url.Action("NachBaliye8","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/nach-baliye-8-thum.jpg" alt="" /> <span>Nach Baliye 8</span> </a> </li>
             <li class="fadeRight t-animated" data-t-show="5"><a href="@Url.Action("HSPubh","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/hsubh-thum.jpg" alt="" /> <span>HAR SHAAKH PE ULLU BAITHAA HAI</span> </a> </li>
             <li class="fadeRight t-animated" data-t-show="6"><a href="@Url.Action("Kullfi","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/kullfi-thum.jpg" alt="" /> <span>KULFI</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="6"><a href="@Url.Action("Khichdi","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/khichadi-thum.jpg" alt="" /> <span>KHICHDI</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="6"><a href="@Url.Action("Tgilc","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/tgilc-thums.jpg" alt="" /> <span>TGILC</span> </a> </li>
             <li class="fadeRight t-animated" data-t-show="7"><a href="@Url.Action("Pow","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/pow-thum.jpg" alt="" /> <span>'POW' Bandhi Yuddh ke</span> </a> </li>
             <li class="fadeRight t-animated" data-t-show="8"><a href="@Url.Action("JungleBook","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/junglebook-thum.jpg" alt="" /> <span>The Jungle Book</span> </a> </li>
             <li class="fadeRight t-animated" data-t-show="9"><a href="@Url.Action("Dhoni","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/ms-dhoni-thum.jpg" alt="" /> <span>M.S. Dhoni</span> </a> </li>
@@ -44,11 +46,13 @@
         <ul id="usports" class="horizontalScroll">
             <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("USports","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/usports-thum.jpg" alt="" /> <span>USports</span> </a> </li>
             <li class="fadeRight t-animated" data-t-show="2"><a href="@Url.Action("UCypher","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/ucypher-thum.jpg" alt="" /> <span>UCypher</span> </a> </li>
-            <li class="fadeRight t-animated" data-t-show="3"><a href="@Url.Action("UCypherInstafight","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/u-cypher-insta-fight-thum.jpg" alt="" /> <span>UCypher - Insta Fight</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="3"><a href="@Url.Action("USportsScratch","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/usports-scratch-thum.jpg" alt="" /> <span>USports Scratch</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="3"><a href="@Url.Action("UCypherUseOfData","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/ucypher-thum.jpg" alt="" /> <span>USports Use of Data</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="3"><a href="@Url.Action("USportsHamburger","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/usports-hamburger-thum.jpg" alt="" /> <span>USports Hamburge</span> </a> </li>
         </ul>
-        <ul id="boutique" class="horizontalScroll">
+        @*<ul id="boutique" class="horizontalScroll">
             <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("bql","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/boutique-thum.jpg" alt="" /> <span>Boutique Living</span> </a> </li>
-        </ul>        
+        </ul>*@        
         @*<ul id="mgage" class="horizontalScroll">
            <li class="fadeRight t-animated" data-t-show="1"><a href="m-gage.php" class="hvr-grow-shadow"><img src="images/thums/mGage-thum.jpg" alt=""/> <span>mGage</span> </a> </li>
          </ul>
