--- a/Sparkt.WebApp/Views/work/UCypherUseOfDataMS.cshtml
+++ b/Sparkt.WebApp/Views/work/UCypherUseOfDataMS.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Sparkt Work | UCypher";
+    ViewBag.Title = "UCypher - Use Of Data Marketing Sciences";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
 }
 
@@ -32,7 +32,7 @@
             <li class="tooltip" title="ABBYS: 18.B Youth Marketing - Silver"><img src="images/awards/abbys-silver.png" class="responsive-img" alt=""/> </li>
           </ul>
           </div>-->
-       @Html.Partial("_WorkMenu");
+        @Html.Partial("_WorkMenu");
     </div>
     <div class="section">
         <div class="head-title floated ">
@@ -166,3 +166,5 @@
         </div>
     </div>
 </main>
+
+
