--- a/Sparkt.WebApp/Views/work/Khichdi.cshtml
+++ b/Sparkt.WebApp/Views/work/Khichdi.cshtml
@@ -7,25 +7,29 @@
 <main>
     <div class="section">
         <div class="work-banner">
+            <!--<div class="banner-source">
+              <div class="banner-video">
+                <video class="bannerplayer" poster="images/banners/khichadi-cover.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                  <source type="video/youtube" src="https://youtu.be/y4sgMwqZQRs"/>
+                </video>
+              </div>
+              <div class="banner-image" style="background-image: url(images/banners/khichadi-cover.jpg);"> </div>
+            </div>-->
+
             <div class="banner-source">
-                <div class="banner-video">
-                    <video class="bannerplayer" poster="~/Content/work/images/banners/kulfi-cover.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
-                        <source type="video/youtube" src="https://youtu.be/y4sgMwqZQRs" />
-                    </video>
+                <div class="banner-video  middle-align" style="background-image: url(../Content/work/images/banners/khichadi-cover.jpg);">
                 </div>
-                <div class="banner-image" style="background-image: url(../Content/work/images/banners/kulfi-cover.jpg);"> </div>
+
             </div>
-
-
 
             <div class="head-title floated">
                 <i class="title-icon"><img src="~/Content/work/images/title-icon.png" alt="" /></i>
                 <h1>Khichdi</h1>
                 <div class="clear"></div>
-                <span>She sings about anything!</span>
-            </div>            
+                <span>Digital exclusive content to <br>introduce iconic characters</span>
+            </div>
         </div>
-        @Html.Partial("_WorkMenu");
+      @Html.Partial("_WorkMenu");
     </div>
     <div class="section">
         <div class="head-title floated ">
@@ -39,25 +43,139 @@
                         <div class="creative-assets">
                             <div class="container">
                                 <div class="assets-title">
-                                    <h3>Skip ads with kullfi charming viewers <br>to watch her musical story</h3>
+                                    <h3>Creating content with the iconic dialogue exchange and interaction <br>between two key characters on the show </h3>
                                 </div>
-                                <div class="mobile-style-carousel">
+                                <div class="sparkt-carousel">
                                     <div class="mobile-wrapp">
-                                        <img src="~/Content/work/images/mobile-slider.png" alt="" class="mobile-vector" />
+                                        <!-- <span class="chaitu-elem elem-7" ><img src="images/chaitulala-elem-7.png" alt=""/></span>-->
+
                                         <div class="video-slider">
                                             <div class="video-item">
-                                                <video poster="~/Content/work/images/video-thums/bharti-haarsh-nach8.png" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
-                                                    <source src="https://youtu.be/xWIp1PGaHcw" type="video/youtube" />
+                                                <video poster="http://img.youtube.com/vi/aXKoL1gwo7E/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                    <source src="https://youtu.be/aXKoL1gwo7E" type="video/youtube" />
                                                 </video>
                                             </div>
                                             <div class="video-item">
-                                                <video poster="~/Content/work/images/video-thums/sanam-abigali-nach8.png" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
-                                                    <source src="https://youtu.be/Z55--9Ei0EA" type="video/youtube" />
+                                                <video poster="http://img.youtube.com/vi/OryPbyj1fLc/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                    <source src="https://youtu.be/OryPbyj1fLc" type="video/youtube" />
                                                 </video>
                                             </div>
                                             <div class="video-item">
-                                                <video poster="~/Content/work/images/video-thums/divyank-vivek-nach8.png" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
-                                                    <source src="https://youtu.be/3Uv0dmH8Xzg" type="video/youtube" />
+                                                <video poster="http://img.youtube.com/vi/Ez8ZDfc-eaM/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                    <source src="https://youtu.be/Ez8ZDfc-eaM" type="video/youtube" />
+                                                </video>
+                                            </div>
+
+                                            <div class="video-item">
+                                                <video poster="http://img.youtube.com/vi/Ez8ZDfc-eaM/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                    <source src="https://youtu.be/Ez8ZDfc-eaM" type="video/youtube" />
+                                                </video>
+                                            </div>
+
+                                        </div>
+                                    </div>
+                                    <div class="video-nav">
+                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/aXKoL1gwo7E/maxresdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/OryPbyj1fLc/maxresdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/Ez8ZDfc-eaM/maxresdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/Ez8ZDfc-eaM/maxresdefault.jpg" alt="" /></a> </div>
+
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div>
+                        <div class="creative-assets">
+                            <div class="container">
+                                <div class="assets-title">
+                                    <h3>Re-introducing the legendary cast and crew of the show in <br>its new season with digital exclusive content </h3>
+                                </div>
+                                <div class="sparkt-carousel">
+                                    <div class="mobile-wrapp">
+                                        <!-- <span class="chaitu-elem elem-7" ><img src="images/chaitulala-elem-7.png" alt=""/></span>-->
+
+                                        <div class="video-slider">
+
+                                            <div class="video-item">
+                                                <video poster="http://img.youtube.com/vi/GBsPThfY9r8/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                    <source src="https://youtu.be/GBsPThfY9r8" type="video/youtube" />
+                                                </video>
+                                            </div>
+
+                                            <div class="video-item">
+                                                <video poster="http://img.youtube.com/vi/q2P6C5fUI5Q/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                    <source src="https://youtu.be/q2P6C5fUI5Q" type="video/youtube" />
+                                                </video>
+                                            </div>
+
+                                            <div class="video-item">
+                                                <video poster="http://img.youtube.com/vi/w3QCXuHxS3w/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                    <source src="https://youtu.be/w3QCXuHxS3w" type="video/youtube" />
+                                                </video>
+                                            </div>
+
+                                            <div class="video-item">
+                                                <video poster="http://img.youtube.com/vi/Iu1otqZRD6Y/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                    <source src="https://youtu.be/Iu1otqZRD6Y" type="video/youtube" />
+                                                </video>
+                                            </div>
+
+                                            <div class="video-item">
+                                                <video poster="http://img.youtube.com/vi/nkqzwr2kiDs/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                    <source src="https://youtu.be/nkqzwr2kiDs" type="video/youtube" />
+                                                </video>
+                                            </div>
+
+                                            <div class="video-item">
+                                                <video poster="http://img.youtube.com/vi/4Rx29y4f_D0/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                    <source src="https://youtu.be/4Rx29y4f_D0" type="video/youtube" />
+                                                </video>
+                                            </div>
+
+                                        </div>
+                                    </div>
+                                    <div class="video-nav">
+
+                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/GBsPThfY9r8/maxresdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/q2P6C5fUI5Q/maxresdefault.jpg" alt="" /></a> </div>
+
+
+
+                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/w3QCXuHxS3w/maxresdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/Iu1otqZRD6Y/maxresdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/nkqzwr2kiDs/maxresdefault.jpg" alt="" /></a> </div>
+
+                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/4Rx29y4f_D0/maxresdefault.jpg" alt="" /></a> </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div>
+                        <div class="creative-assets">
+                            <div class="container">
+                                <div class="assets-title">
+                                    <h3>Thumbstopping content to bring alive the zany <br>characters and situations on the show </h3>
+                                </div>
+                                <div class="sparkt-carousel">
+                                    <div class="mobile-wrapp">
+                                        <!-- <span class="chaitu-elem elem-7" ><img src="images/chaitulala-elem-7.png" alt=""/></span>-->
+
+                                        <div class="video-slider">
+
+                                            <div class="video-item">
+                                                <video poster="http://img.youtube.com/vi/1HP84ZLt2lo/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                    <source src="https://youtu.be/GBsPThfY9r8" type="video/youtube" />
+                                                </video>
+                                            </div>
+
+                                            <div class="video-item">
+                                                <video poster="http://img.youtube.com/vi/RoyV6jp5SaU/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                    <source src="https://youtu.be/RoyV6jp5SaU" type="video/youtube" />
                                                 </video>
                                             </div>
 
@@ -66,9 +184,11 @@
                                         </div>
                                     </div>
                                     <div class="video-nav">
-                                        <div class="nav-item"><a href="#" class="hvr-grow"><img src="~/Content/work/images/video-thums/bharti-haarsh-nach8.png" alt="" /></a> </div>
-                                        <div class="nav-item"><a href="#" class="hvr-grow"><img src="~/Content/work/images/video-thums/sanam-abigali-nach8.png" alt="" /></a> </div>
-                                        <div class="nav-item"><a href="#" class="hvr-grow"><img src="~/Content/work/images/video-thums/divyank-vivek-nach8.png" alt="" /></a> </div>
+
+                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/1HP84ZLt2lo/maxresdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/RoyV6jp5SaU/maxresdefault.jpg" alt="" /></a> </div>
+
+
 
                                     </div>
                                 </div>
@@ -80,9 +200,9 @@
             </div>
         </div>
     </div>
-    <div class="section white-bg">
+    @*<div class="section white-bg">
         <div class="head-title floated text-color-dark">
-            <i class="title-icon"><img src="~/Content/work/images/title-icon.png" alt="" /></i>
+            <i class="title-icon"><img src="~/Content/images/title-icon.png" alt="" /></i>
             <h2>Results</h2>
         </div>
         <div class="container bottom-padding-none">
@@ -111,5 +231,5 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>*@
 </main>
