--- a/Sparkt.WebApp/Views/work/Tgilc.cshtml
+++ b/Sparkt.WebApp/Views/work/Tgilc.cshtml
@@ -29,7 +29,7 @@
                 <i class="title-icon"><img src="~/Content/work/images/title-icon.png" alt="" /></i>
                 <h1>The Great Indian Laughter Challenge</h1>
                 <div class="clear"></div>
-                <span>Digital exclusive content to <br>introduce iconic characters</span>
+                <span>Getting the nation to join in on a laughter riot with thumbstopping content</span>
             </div>
         </div>
         @Html.Partial("_WorkMenu");
